--- a/ansible/roles/setup_archiva/templates/settings-admin.xml.j2
+++ b/ansible/roles/setup_archiva/templates/settings-admin.xml.j2
@@ -1,4 +1,11 @@
 <settings>
+   <proxies>
+    <proxy>
+      <active>true</active>
+      <host>cpswtng_archiva</host>
+      <port>8080</port>
+    </proxy>
+  </proxies>
 <servers>
     <server>
       <id>archiva.internal</id>
