initial work on ucef site. not ready yet

--- a/static/css/images.css
+++ b/static/css/images.css
@@ -1,5 +1,5 @@
 ---
 ---
 .home-title {
-  background: url('{{ site.baseurl }}/assets/electric-cables.jpg');
+  background: url('{{ site.baseurl }}/assets/ucef_final.jpg');
 }
