--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,23 +1,25 @@
 <!-- Defines the banner at top of pages other than the home page -->
 <header class="banner" role="banner">
-  <div class="section-container">
-    <div class="section-content">
-      <div class="banner-title">
-        <a href="{{ site.baseurl }}/">
-          <img class="logo" src="{{ site.baseurl }}/assets/logo.png" alt="UCEF">
-          <h1>UCEF</h1>
-        </a>
-      </div>
-      <div class="banner-nav">
-        <nav role="navigation" class="main-nav">
-          <ul>
-							<li><a href="{{ site.baseurl }}/aboutus">About Us</a></li>
-	   	 <li><a href="{{ site.baseurl }}/community">Community</a></li>
-            <li><a href="{{ site.baseurl }}/library">Library</a></li>
-            <li><a href="mailto:UCEF-info@nist.gov?subject=UCEF--more%20info&#038;body=Hi!%0A%0AI’d%20like%20to%20learn%20more%20about%20how%20our%20organization%20can%20participate%20in%20the%20UCEF.%20Please%20send%20me%20more%20information.%0A%0AThanks,%0A%0A[Your%20name]%0A[Your%20organization]%0A[Your%20contact%20information]" class="btn btn-primary">Get Started</a></li>
-          </ul>
-        </nav>
-      </div>
+    <div class="section-container">
+        <div class="section-content">
+            <div class="banner-title">
+                <a href="{{ site.baseurl }}/">
+                    <img class="logo" src="{{ site.baseurl }}/assets/logo.png" alt="UCEF">
+                    <h1>UCEF</h1>
+                </a>
+            </div>
+            <div class="banner-nav">
+                <nav role="navigation" class="main-nav">
+                    <ul>
+                        <li><a href="{{ site.baseurl }}/aboutus">About Us</a></li>
+                        <li><a href="{{ site.baseurl }}/library">Library</a></li>
+                        <li><a href="{{ site.baseurl }}/development">Development</a></li>
+                        <li><a href="{{ site.baseurl }}/community">Community</a></li>
+                        <li><a href="mailto:UCEF-info@nist.gov?subject=UCEF--more%20info&#038;body=Hi!%0A%0AI’d%20like%20to%20learn%20more%20about%20how%20our%20organization%20can%20participate%20in%20the%20UCEF.%20Please%20send%20me%20more%20information.%0A%0AThanks,%0A%0A[Your%20name]%0A[Your%20organization]%0A[Your%20contact%20information]"
+                                class="btn btn-primary">Join List</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </div>
-  </div>
 </header>
