Convert to NIST new standardized header and footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,14 @@
 <head>
 <!--
 --> 
+<link rel="stylesheet" href="https://pages.nist.gov/nist-header-footer/css/nist-combined.css">
+<script src="https://pages.nist.gov/nist-header-footer/js/jquery-1.9.0.min.js" type="text/javascript" defer="defer"></script>
+<script src="https://pages.nist.gov/nist-header-footer/js/nist-header-footer.js" type="text/javascript" defer="defer"></script>
+
 {% include header.html %}
 
 </head>
 <body>
-{% include elinclude.html %}
   {{ content }}
-     
- 
-{% include elbottominclude.html %}
 </body>
 </html>
