--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -15,8 +15,7 @@
                         <li><a href="{{ site.baseurl }}/library">Library</a></li>
                         <li><a href="{{ site.baseurl }}/development">Development</a></li>
                         <li><a href="{{ site.baseurl }}/community">Community</a></li>
-                        <li><a href="mailto:UCEF-info@nist.gov?subject=UCEF--more%20info&#038;body=Hi!%0A%0AI’d%20like%20to%20learn%20more%20about%20how%20our%20organization%20can%20participate%20in%20the%20UCEF.%20Please%20send%20me%20more%20information.%0A%0AThanks,%0A%0A[Your%20name]%0A[Your%20organization]%0A[Your%20contact%20information]"
-                                class="btn btn-primary">Join List</a></li>
+                        <li><a href="mailto:ucef+subscribe@list.nist.gov?subject=subscribe&#038;body=" class="btn btn-primary">Join List</a></li>
                     </ul>
                 </nav>
             </div>
